--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,15 @@
   <title>NgV16Scss</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+
+  <!-- google 授權登入 -->
+  <meta name="google-signin-scope" content="profile email">
+  <meta 
+    name="google-signin-client_id"
+    content="328066296243-5opekodfa93rria1e8utcql4rkrbvktq.apps.googleusercontent.com">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
   <app-root></app-root>
